# json-schema-for-humans-sphinx

./: .gitignore  CI_SETUP_SUMMARY.md  MANIFEST.in  Makefile  PUBLISH_WORKFLOW_UPDATES.md  README.md  README.rst  TRUSTED_PUBLISHERS_SETUP.md  codecov.yml  local-ci-test.sh  pyproject.toml  pytest.ini  requirements-dev.txt  serve-docs-unified.sh  serve-docs.sh  setup.cfg  test_report.json  test_results.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: create-reports-page.sh  generate_badges.py
.github/workflows/: ci.yml  docs.yml  pages.yml  publish.yml  release.yml  reusable-test.yml  tests_and_docs.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  configuration.rst  development.rst  examples.rst  index.rst  installation.rst  quickstart.rst  search_patterns.rst  usage.rst
docs/_static/: custom.css
example/docs/: conf.py  index.rst
example/schemas/: MyClass.greet.schema.json  add.schema.json
example/src/: example_module.py
examples/: example_module.py
examples/docs/: conf.py  manual_schemas.rst
src/jsoncrack_for_sphinx/: __init__.py  autodoc.py  config.py  config_classes.py  config_main.py  config_parser.py  config_parsing.py  config_utils.py  config_values.py  custom_patterns.py  directive.py  extension.py  fixtures.py  html_generator.py  pattern_generator.py  pattern_strategies.py  pattern_strategies_impl.py  pattern_utils.py  schema_finder.py  schema_utils.py  search_policy.py  utils.py
src/stoplightio_schema_sphinx/: __init__.py  extension.py  sphinx.py
tests/: conftest.py  test_additional.py  test_compatibility.py  test_config.py  test_documentation.py  test_extension.py  test_extension_fixed.py  test_fixtures.py  test_integration.py  test_package.py  test_package_new.py  test_performance.py  test_search_policy.py  test_static.py  test_utils.py
tests/compatibility/: test_backward_compatibility.py  test_feature_compatibility.py
tests/config/: test_config_main.py  test_config_parsing.py  test_config_utils.py
tests/fixtures/: test_fixtures.py
tests/fixtures_global/: utility_fixtures.py
tests/integration/: test_basic_workflow.py  test_config_integration.py  test_directive_integration.py  test_html_integration.py  test_integration.py  test_sphinx_integration.py
tests/package/: test_package_compatibility.py  test_package_imports.py  test_package_integration.py  test_package_metadata.py
tests/search_policy/: test_config_regression.py  test_pattern_generation.py  test_schema_finding.py  test_search_policy_main.py
tests/static/: test_static.py
tests/unit/: test_setup.py  (+9 more)
(+29 files in other folders)
